Bug 153036 - FILEOPEN PPTX resized connector broken
Summary: FILEOPEN PPTX resized connector broken
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Attila Szűcs
URL:
Whiteboard: target:7.6.0 target:7.5.1 target:7.4.6
Keywords:
Depends on:
Blocks:
 
Reported: 2023-01-16 00:11 UTC by Attila Szűcs
Modified: 2023-01-24 10:36 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
pptx file with L shaped connector (32.27 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2023-01-16 00:13 UTC, Attila Szűcs
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Attila Szűcs 2023-01-16 00:11:02 UTC
Description:
Similar to Bug 149756.
Attached a pptx file saved by powerpoint, with an "L" shaped connector (=with 1 rectangle break) that impress import as a "Z" shaped connector (=with 2 rectangle break).

The difference with Bug 149756 is that it can be achieved only by resizing the connector, as even Powerpoint would generate a "Z" shaped connector for this size.
This example connector was created with different size (much-much less wide), where powerpoint generated an "L" shape, then manually modify its size.
Modifying size does not change shape, powerpoint export that as a "bentConnector2" connector, (which means it must be "L" shaped no matter the sizes)

Steps to Reproduce:
1.open attached file
2.check if the arrow connector is shaped "L" or "Z"


Actual Results:
The arrow is a "Z" shaped connector

Expected Results:
The arros should be a simple "L" shaped connector


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f2f008c52aaa88329c07f441de60d6fdfce9f0b3
CPU threads: 6; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL threaded
Comment 1 Attila Szűcs 2023-01-16 00:13:10 UTC
Created attachment 184675 [details]
pptx file with L shaped connector
Comment 2 Commit Notification 2023-01-19 08:28:03 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17c68fad2aef917adfdd3d4d651da786e620699c

tdf#153036 PPTX import resized connector broken

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Xisco Faulí 2023-01-19 08:51:27 UTC
Verified in

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 17c68fad2aef917adfdd3d4d651da786e620699c
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: de-DE (es_ES.UTF-8); UI: en-US
Calc: threaded

@Attila Szűcs, thanks for fixing this issue!!
Comment 4 Commit Notification 2023-01-19 11:13:21 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/a44ab07e05521b987c842265184240661e330ea4

tdf#153036 PPTX import resized connector broken

It will be available in 7.5.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-01-19 13:29:55 UTC
Attila Szűcs committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/379866dd23be2cd3eb9952fbc6b106daaec0cdea

tdf#153036 PPTX import resized connector broken

It will be available in 7.4.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2023-01-24 10:36:26 UTC
7.4.5 was a hotfix release, updating target in status-whiteboard